Input Focus Issue fix, Imput Outline fic

--- a/css/app.ui.css
+++ b/css/app.ui.css
@@ -44,3 +44,8 @@
 	-webkit-user-select: auto !important;
 	-o-user-select: auto !important;
 }
+
+textarea:focus,
+input:focus {
+	outline: none;
+}
